--- a/package.json
+++ b/package.json
@@ -25,59 +25,67 @@
     "url": "git+https://github.com/Microsoft/PowerBI-visuals-pulsechart.git"
   },
   "devDependencies": {
-    "@types/d3": "^5.0.0",
-    "@types/jasmine": "^2.5.53",
-    "@types/jasmine-jquery": "^1.5.31",
-    "@types/jquery": "3.3.22",
-    "@types/karma": "3.0.0",
-    "@types/lodash": "4.14.117",
-    "@types/webpack": "4.4.17",
-    "coveralls": "3.0.2",
-    "css-loader": "1.0.0",
-    "istanbul-instrumenter-loader": "^3.0.1",
-    "jasmine": "3.3.0",
-    "jasmine-jquery": "2.1.1",
-    "jquery": "3.3.1",
-    "karma": "3.1.1",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "1.1.2",
-    "karma-coverage-istanbul-reporter": "^2.0.4",
-    "karma-jasmine": "1.1.2",
-    "karma-junit-reporter": "^1.2.0",
-    "karma-sourcemap-loader": "0.3.7",
-    "karma-typescript": "3.0.13",
+    "@types/d3-array": "^3.0.2",
+    "@types/d3-axis": "^3.0.1",
+    "@types/d3-ease": "^3.0.0",
+    "@types/d3-scale": "^4.0.2",
+    "@types/d3-selection": "^3.0.2",
+    "@types/d3-shape": "^3.0.2",
+    "@types/d3-time": "^3.0.0",
+    "@types/d3-timer": "^3.0.0",
+    "@types/d3-transition": "^3.0.1",
+    "@types/jasmine": "^3.10.2",
+    "@types/lodash-es": "^4.17.5",
+    "@types/webpack": "^5.28.0",
+    "coveralls": "^3.1.1",
+    "css-loader": "^6.5.1",
+    "jasmine": "3.10.0",
+    "karma": "^6.3.9",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage": "^2.1.0",
+    "karma-jasmine": "^4.0.1",
+    "karma-sourcemap-loader": "^0.3.8",
+    "karma-typescript": "^5.5.2",
     "karma-typescript-preprocessor": "0.4.0",
-    "karma-webpack": "3.0.5",
-    "less": "^3.8.1",
-    "less-loader": "^4.1.0",
-    "powerbi-visuals-api": "^2.3.1",
-    "powerbi-visuals-tools": "^3.0.10",
-    "powerbi-visuals-utils-testutils": "^2.1.4",
-    "puppeteer": "^1.6.1",
-    "style-loader": "0.23.1",
-    "stylelint": "^9.6.0",
-    "stylelint-suitcss": "^3.0.0",
-    "ts-loader": "5.2.2",
-    "ts-node": "^7.0.0",
-    "tslint": "5.11.0",
-    "typescript": "^3.0.1",
-    "webpack": "4.23.1"
+    "karma-webpack": "^5.0.0",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
+    "powerbi-visuals-api": "~3.8.0",
+    "powerbi-visuals-tools": "^4.0.0",
+    "powerbi-visuals-utils-testutils": "^2.4.2",
+    "puppeteer": "^13.0.0",
+    "style-loader": "^3.3.1",
+    "stylelint": "^13.13.1",
+    "stylelint-suitcss": "^4.0.0",
+    "ts-loader": "^9.2.6",
+    "ts-node": "^10.4.0",
+    "tslint": "^6.1.2",
+    "tslint-microsoft-contrib": "^6.2.0",
+    "typescript": "^4.5.4",
+    "webpack": "5.65.0"
   },
   "dependencies": {
-    "core-js": "^3.1.4",
-    "d3": "^5.4.0",
-    "jquery": "3.3.1",
-    "lodash": "4.17.11",
-    "powerbi-models": "^1.0.8",
-    "powerbi-visuals-utils-chartutils": "2.1.0",
-    "powerbi-visuals-utils-colorutils": "2.1.0",
-    "powerbi-visuals-utils-dataviewutils": "2.1.0",
-    "powerbi-visuals-utils-formattingutils": "4.1.0",
-    "powerbi-visuals-utils-interactivityutils": "^5.1.0",
-    "powerbi-visuals-utils-svgutils": "^2.1.0",
-    "powerbi-visuals-utils-tooltiputils": "2.1.3",
-    "powerbi-visuals-utils-typeutils": "2.1.0",
-    "snyk": "^1.189.0"
+    "d3-array": "^3.1.1",
+    "d3-axis": "^3.0.0",
+    "d3-ease": "^3.0.1",
+    "d3-scale": "^4.0.2",
+    "d3-selection": "^3.0.0",
+    "d3-shape": "^3.0.1",
+    "d3-time": "^3.0.0",
+    "d3-timer": "^3.0.1",
+    "d3-transition": "^3.0.1",
+    "lodash-es": "^4.17.21",
+    "powerbi-models": "^1.9.7",
+    "powerbi-visuals-utils-chartutils": "^2.6.0",
+    "powerbi-visuals-utils-colorutils": "^2.3.1",
+    "powerbi-visuals-utils-dataviewutils": "^2.4.1",
+    "powerbi-visuals-utils-formattingutils": "^4.7.1",
+    "powerbi-visuals-utils-interactivityutils": "^5.7.1",
+    "powerbi-visuals-utils-svgutils": "^2.3.2",
+    "powerbi-visuals-utils-tooltiputils": "^2.5.2",
+    "powerbi-visuals-utils-typeutils": "^2.3.1",
+    "snyk": "^1.792.0",
+    "util": "^0.12.4"
   },
   "snyk": true
 }
