--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "package": "pbiviz package",
     "cert": "pbiviz --create-cert",
     "eslint": "npx eslint . --ext .js,.jsx,.ts,.tsx",
-    "pretest": "pbiviz package --resources --no-minify --no-pbiviz --no-plugin",
+    "pretest": "pbiviz package --resources --no-minify --no-pbiviz",
     "test": "karma start",
-    "snyk-protect": "snyk protect",
+    "snyk-protect": "snyk-protect",
     "prepare": "npm run snyk-protect"
   },
   "license": "MIT",
@@ -23,67 +23,66 @@
     "url": "git+https://github.com/Microsoft/PowerBI-visuals-pulsechart.git"
   },
   "devDependencies": {
-    "@types/d3-array": "^3.0.2",
-    "@types/d3-axis": "^3.0.1",
-    "@types/d3-ease": "^3.0.0",
-    "@types/d3-scale": "^4.0.2",
-    "@types/d3-selection": "^3.0.2",
-    "@types/d3-shape": "^3.0.2",
-    "@types/d3-time": "^3.0.0",
-    "@types/d3-timer": "^3.0.0",
-    "@types/d3-transition": "^3.0.1",
-    "@types/jasmine": "^3.10.2",
-    "@types/lodash-es": "^4.17.5",
-    "@types/webpack": "^5.28.0",
+    "@types/d3-array": "^3.2.1",
+    "@types/d3-axis": "^3.0.6",
+    "@types/d3-ease": "^3.0.2",
+    "@types/d3-scale": "^4.0.8",
+    "@types/d3-selection": "^3.0.10",
+    "@types/d3-shape": "^3.1.6",
+    "@types/d3-time": "^3.0.3",
+    "@types/d3-timer": "^3.0.2",
+    "@types/d3-transition": "^3.0.8",
+    "@types/jasmine": "^5.1.4",
+    "@types/lodash-es": "^4.17.12",
+    "@types/webpack": "^5.28.5",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
     "coveralls": "^3.1.1",
-    "css-loader": "^6.5.1",
+    "css-loader": "^7.1.2",
     "eslint": "^8.57.0",
     "eslint-plugin-powerbi-visuals": "^0.8.1",
-    "jasmine": "3.10.0",
-    "karma": "^6.3.16",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage": "^2.1.0",
-    "karma-jasmine": "^4.0.1",
-    "karma-sourcemap-loader": "^0.3.8",
-    "karma-typescript": "^5.5.2",
-    "karma-typescript-preprocessor": "0.4.0",
-    "karma-webpack": "^5.0.0",
-    "less": "^4.1.2",
-    "less-loader": "^10.2.0",
-    "powerbi-visuals-api": "^4.2.0",
-    "powerbi-visuals-tools": "^4.0.4",
-    "powerbi-visuals-utils-testutils": "^2.6.0",
-    "puppeteer": "^13.3.2",
-    "style-loader": "^3.3.1",
-    "ts-loader": "^9.2.6",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.4",
-    "webpack": "5.65.0"
+    "jasmine": "^5.1.0",
+    "karma": "^6.4.3",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage": "^2.2.1",
+    "karma-jasmine": "^5.1.0",
+    "karma-sourcemap-loader": "^0.4.0",
+    "karma-typescript": "^5.5.4",
+    "karma-typescript-preprocessor": "^0.4.0",
+    "karma-webpack": "^5.0.1",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
+    "playwright-chromium": "^1.44.1",
+    "powerbi-visuals-api": "^5.10.0",
+    "powerbi-visuals-tools": "^5.5.0",
+    "powerbi-visuals-utils-testutils": "^6.1.1",
+    "style-loader": "^4.0.0",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5",
+    "webpack": "^5.92.0"
   },
   "dependencies": {
-    "d3-array": "^3.1.1",
+    "@snyk/protect": "^1.1291.1",
+    "d3-array": "^3.2.4",
     "d3-axis": "^3.0.0",
     "d3-ease": "^3.0.1",
     "d3-scale": "^4.0.2",
     "d3-selection": "^3.0.0",
-    "d3-shape": "^3.0.1",
-    "d3-time": "^3.0.0",
+    "d3-shape": "^3.2.0",
+    "d3-time": "^3.1.0",
     "d3-timer": "^3.0.1",
     "d3-transition": "^3.0.1",
     "lodash-es": "^4.17.21",
-    "powerbi-models": "^1.9.7",
-    "powerbi-visuals-utils-chartutils": "^2.6.0",
-    "powerbi-visuals-utils-colorutils": "^2.3.1",
-    "powerbi-visuals-utils-dataviewutils": "^2.4.1",
-    "powerbi-visuals-utils-formattingutils": "^4.7.1",
-    "powerbi-visuals-utils-interactivityutils": "^5.7.1",
-    "powerbi-visuals-utils-svgutils": "^2.3.2",
-    "powerbi-visuals-utils-tooltiputils": "^2.5.2",
-    "powerbi-visuals-utils-typeutils": "^2.3.1",
-    "snyk": "^1.792.0",
-    "util": "^0.12.4"
+    "powerbi-models": "^1.15.2",
+    "powerbi-visuals-utils-chartutils": "^6.0.4",
+    "powerbi-visuals-utils-colorutils": "^6.0.4",
+    "powerbi-visuals-utils-dataviewutils": "^6.1.0",
+    "powerbi-visuals-utils-formattingutils": "^6.1.1",
+    "powerbi-visuals-utils-interactivityutils": "^6.0.4",
+    "powerbi-visuals-utils-svgutils": "^6.0.4",
+    "powerbi-visuals-utils-tooltiputils": "^6.0.4",
+    "powerbi-visuals-utils-typeutils": "^6.0.3"
   },
   "snyk": true
 }
