--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "pbiviz start",
     "package": "pbiviz package",
     "cert": "pbiviz --create-cert",
-    "eslint": "npx eslint . --ext .js,.jsx,.ts,.tsx",
+    "eslint": "npx eslint .",
     "pretest": "pbiviz package --resources --no-minify --no-pbiviz",
     "test": "karma start",
     "snyk-protect": "snyk-protect",
@@ -35,11 +35,11 @@
     "@types/jasmine": "^5.1.4",
     "@types/lodash-es": "^4.17.12",
     "@types/webpack": "^5.28.5",
-    "@typescript-eslint/eslint-plugin": "^7.15.0",
-    "@typescript-eslint/parser": "^7.15.0",
+    "@typescript-eslint/eslint-plugin": "^8.24.0",
+    "@typescript-eslint/parser": "^8.24.0",
     "css-loader": "^7.1.2",
-    "eslint": "^8.57.0",
-    "eslint-plugin-powerbi-visuals": "^0.8.1",
+    "eslint": "^9.20.1",
+    "eslint-plugin-powerbi-visuals": "^1.0.0",
     "jasmine": "^5.1.0",
     "karma": "^6.4.3",
     "karma-chrome-launcher": "^3.2.0",
@@ -59,6 +59,7 @@
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
+    "typescript-eslint": "^8.24.0",
     "webpack": "^5.92.1"
   },
   "dependencies": {
